<resources>
    <string name="app_name">Foodie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Foodie</string>
    <string name="onboardingTitleOne">Eat, eat and repeat</string>
    <string name="onboardingDescriptionOne">Plan your meals effortlessly and enjoy delicious food every day. Say goodbye to last-minute favoriteMealModel stress and hello to hassle-free dining!</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="onboardingTextThree">Smart Meal Planning</string>
    <string name="onboardingDescriptionThree">Get personalized favoriteMealModel plans that fit your taste and lifestyle. Whether you love quick recipes or gourmet meals, we’ve got you covered!</string>
    <string name="onboardingTextTwo">Cook At Home Like a Professional Chef</string>
    <string name="onboardingDescriptionTwo">"Get a million of beautiful and delicious recipes around the world. "</string>
    <string name="get_started">Get Started</string>
    <string name="loginText">Welcome Back, Foodie!</string>
    <string name="loginDesc">"Let’s plan, cook, and enjoy – Please sign in to your account "</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="signIn">Sign In</string>
    <string name="signInWithGoogle">Sign In With Google</string>
    <string name="visitAsAGuest">Visit as a Guest</string>
    <string name="donotHaveAnAccount">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="registerDesc">Create an account and unlock a world of tasty favoriteMealModel plans!</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="iAgreeWith">I Agree with</string>
    <string name="termsOfService">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="calender">Calender</string>
    <string name="profile">Profile</string>
    <string name="recipeOfTheDay">Recipe of the Day:</string>
    <string name="whatToCookNow">What to Cook Now</string>
    <string name="homeTextDesc">Get the best Network recipes</string>
    <string name="homeDescTextTwo">everyday of the week with our daily dish picks.</string>
    <string name="viewRecipe">View Recipe</string>
    <string name="symbol">|</string>
    <string name="refresh">Refresh</string>
    <string name="bestDishes">Best Dishes</string>
    <string name="seeAll">See All</string>
    <string name="addToCalendar">Add To Calendar</string>
    <string name="video">Video</string>
    <string name="ingredients">Ingredients</string>
    <string name="m" />
    <string name="instructions">Instructions</string>
    <string name="pleaseEnterYourEmail">Please Enter Your Email</string>
    <string name="pleaseEnterYourPassword">Please Enter Your Password</string>
    <string name="calendar">Calendar</string>
    <string name="default_web_client_id">120353183461-7b5og0eabkfsb3nf920djpsmvj6lmthi.apps.googleusercontent.com</string>
    <string name="showMore">Show more</string>
    <string name="show">Show More</string>
    <string name="pleaseEnterYourUsername">Please Enter Your Username</string>
    <string name="signOut">Sign Out</string>
    <string name="schedule">Schedule</string>
    <string name="show_less">Show Less</string>
    <string name="show_more">Show More</string>
    <string name="categories">Categories</string>
    <string name="areas">Areas</string>
    <string name="results">" Results"</string>
    <string name="noInternetText">You have lost connection to the internet.\nThis app is offline</string>
    <string name="dismiss">DISMISS</string>
    <string name="turnOnWifi">TURN ON WIFI</string>
    <string name="favorite_collection">favorite</string>
    <string name="you_can_t_add_meal_to_favorite_until_you_sign_in">You can\'t add meal to favorite until you sign in</string>
    <string name="sign_in">SIGN IN</string>
    <string name="alert">Alert !</string>
    <string name="you_can_t_scheduler_the_meal_until_you_sign_in">You can\'t scheduler the meal until you sign in</string>
    <string name="continue_as_a_guest">CONTINUE AS A GUEST</string>
    <string name="please_sign_in_to_can_save_your_favorite_meal">Please sign in to can save your favorite meal</string>
    <string name="your_favorites_list_is_on_a_diet_add_some_tasty_picks">Your favorites list is on a diet… add some tasty picks</string>
    <string name="no_internet_connection_please_reconnect_and_try_again">No internet connection please reconnect and try again!</string>
    <string name="ok">OK</string>
    <string name="meal_is_removed_from_favorite">Meal is removed from favorite</string>
    <string name="meal_is_added_to_favorite">Meal is added to favorite</string>
    <string name="please_sign_in_to_can_schedule_your_meals">Please sign in to can schedule your meals</string>
    <string name="today_s_picks">"Today's Picks: "</string>
    <string name="your_meal_plan_for">"Your Meal Plan For "</string>
    <string name="sign_in_now_to_schedule_your_meals">Sign in now to schedule your meals</string>
    <string name="contact_us">Contact Us</string>
    <string name="guestText">"Hungry for more? Log in now to unlock delicious features! "</string>
    <string name="signInNow">Log in now or risk missing out on the juiciest bites!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="searchMeal">Search Meal</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="meal_is_added_to_calendar">Meal is added to calendar</string>
    <string name="undo">UNDO</string>
    <string name="meal_is_removed_from_calender">Meal is removed from calender</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="resetPassword">Reset Your Password</string>
    <string name="resetPasswordFoodie">Reset Your Password Foodie!</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out ?</string>
    <string name="guest">Guest</string>
    <string name="sign_in_to_see_your_profile">Sign in to see your profile</string>
</resources>